# HUnit

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  Example.hs  Guide.html  HUnit.cabal  HUnit.cabal.hugs  HUnit.cabal.tests  KNOWN-ISSUES.txt  Makefile  Makefile.nhc98  README  README.md  Setup.description  Setup.hs  Setup.hs.hugs  Update-History.txt  cabal.project  package.conf.in  package.yaml
.github/workflows/: build.yml
Test/: HUnit.hs  HUnit.lhs
Test/HUnit/: Base.hs  Base.lhs  Lang.hs  Lang.lhs  Terminal.hs  Terminal.lhs  Text.hs  Text.lhs
doc/: Guide.html
examples/: Example.hs  Makefile
examples/test/: HUnitTest98.lhs  HUnitTestBase.lhs  HUnitTestExtended.lhs  Makefile
src/: Makefile.nhc98
src/Test/: HUnit.lhs
src/Test/HUnit/: Base.hs  Base.lhs  Lang.hs  Lang.lhs  Lang98.lhs  LangExtended.lhs  Terminal.hs  Text.hs  Text.lhs
test/: HUnitTest98.lhs  HUnitTestBase.lhs  HUnitTestExtended.lhs  TerminalTest.lhs
tests/: HUnitTest98.lhs  HUnitTestBase.lhs  HUnitTestExtended.hs  HUnitTestExtended.lhs  HUnitTestOptimize.hs  HUnitTests.cabal  HUnitTests.hs  TerminalTest.lhs
