Name:                   HUnit
Version:                1.2.5.2
Cabal-Version:          >= 1.8
License:                BSD3
License-File:           LICENSE
Author:                 Dean Herington
Maintainer:             hunit@richardg.name
Stability:              stable
Homepage:               http://hunit.sourceforge.net/
Category:               Testing
Synopsis:               A unit testing framework for Haskell
Description:
    HUnit is a unit testing framework for Haskell, inspired by the
    JUnit tool for Java, see: <http://www.junit.org>.
Build-Type:             Simple
Data-Files:
    doc/Guide.html
    examples/Example.hs
    prologue.txt
    README

source-repository head
    type:     darcs
    location: http://code.haskell.org/HUnit/

Library
    Build-Depends:
        base == 4.*,
        deepseq
    Exposed-Modules:
        Test.HUnit.Base,
        Test.HUnit.Lang,
        Test.HUnit.Terminal,
        Test.HUnit.Text,
        Test.HUnit
    GHC-Options: -Wall

Test-Suite tests
    Type:               exitcode-stdio-1.0
    Main-Is:            HUnitTests.hs
    HS-Source-Dirs:     tests
    Build-Depends:
        base == 4.*,
        deepseq,
        filepath,
        HUnit
    Other-Modules:
        HUnitTests
        HUnitTestBase
        HUnitTestExtended
        TerminalTest
    GHC-Options:        -Wall
