Name:                   HUnit
Version:                1.3.1.2
Cabal-Version:          >= 1.8
License:                BSD3
License-File:           LICENSE
Author:                 Dean Herington
Maintainer:             Simon Hengel <sol@typeful.net>
Stability:              stable
Homepage:               https://github.com/hspec/HUnit#readme
Category:               Testing
Synopsis:               A unit testing framework for Haskell
Description:
    HUnit is a unit testing framework for Haskell, inspired by the
    JUnit tool for Java, see: <http://www.junit.org>.
Build-Type:             Simple
Extra-Source-Files:
    CHANGELOG.md
    README.md
    examples/Example.hs

source-repository head
    type:     git
    location: https://github.com/hspec/HUnit

Library
    Build-Depends:
        base == 4.*,
        deepseq
    Exposed-Modules:
        Test.HUnit.Base,
        Test.HUnit.Lang,
        Test.HUnit.Terminal,
        Test.HUnit.Text,
        Test.HUnit
    GHC-Options: -Wall

Test-Suite tests
    Type:               exitcode-stdio-1.0
    Main-Is:            HUnitTests.hs
    HS-Source-Dirs:     tests, examples
    Build-Depends:
        base == 4.*,
        deepseq,
        filepath,
        HUnit
    Other-Modules:
        HUnitTests
        HUnitTestBase
        HUnitTestExtended
        TerminalTest
        Example
    GHC-Options:        -Wall
